[gd_scene load_steps=9 format=3 uid="uid://bygoip0hlhnko"]

[ext_resource type="Script" uid="uid://baa51cfsalq2j" path="res://scripts/entities/wasp.gd" id="1_aw6mf"]
[ext_resource type="Texture2D" uid="uid://qase628auigv" path="res://sprites/wasp-Sheet.png" id="1_wv8lk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aw6mf"]
atlas = ExtResource("1_wv8lk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpnbo"]
atlas = ExtResource("1_wv8lk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv8lk"]
atlas = ExtResource("1_wv8lk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jqwpw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw6mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpnbo")
}],
"loop": true,
"name": &"fly",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv8lk")
}],
"loop": false,
"name": &"sting",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wv8lk"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_aw6mf"]
radius = 2.0

[node name="Wasp" type="CharacterBody2D" node_paths=PackedStringArray("_animator")]
process_mode = 1
z_index = 2
z_as_relative = false
collision_layer = 16
collision_mask = 0
motion_mode = 1
script = ExtResource("1_aw6mf")
_max_fly_speed = 50.0
_min_fly_speed = 30.0
_animator = NodePath("Sprite")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jqwpw")
animation = &"fly"
autoplay = "fly"

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wv8lk")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="Shape" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_aw6mf")

[node name="OnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-5.96046e-08, -1)
scale = Vector2(0.4, 0.3)

[connection signal="direction_updated" from="." to="Sprite" method="set_flip_h" flags=3]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_entered"]
[connection signal="screen_entered" from="OnScreenNotifier" to="." method="_on_enter_screen"]
[connection signal="screen_exited" from="OnScreenNotifier" to="." method="_on_exit_screen"]
